--- a/baners/koluchka/index.html
+++ b/baners/koluchka/index.html
@@ -3,18 +3,18 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-	<title>Crimson_clouds</title>
+	<title>index</title>
 <!--Adobe Edge Runtime-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script type="text/javascript" charset="utf-8" src="http://animate.adobe.com/runtime/5.0.1/edge.5.0.1.min.js"></script>
     <style>
-        .edgeLoad-EDGE-51845247 { visibility:hidden; }
+        .edgeLoad-EDGE-11845212 { visibility:hidden; }
     </style>
 <script>
-   AdobeEdge.loadComposition('%D0%91%D0%B0%D0%B3%D1%80%D0%BE%D0%B2%D1%8B%D0%B5%20%D0%BE%D0%B1%D0%BB%D0%B0%D0%BA%D0%B0', 'EDGE-51845247', {
+   AdobeEdge.loadComposition('index', 'EDGE-11845212', {
     scaleToFit: "none",
     centerStage: "horizontal",
-    minW: "580px",
+    minW: "30%",
     maxW: "1980px",
     width: "1980px",
     height: "172px"
@@ -24,10 +24,10 @@
 
 </head>
 <body style="margin:0;padding:0;">
-	<div id="Stage" class="EDGE-51845247">
+	<div id="Stage" class="EDGE-11845212">
 	
-        <video id="Stage_Bagrovye_oblaka" class="edgeLoad-EDGE-51845247 mp4" title="Багровые облака" autoplay="autoplay" loop="loop"></video>
-        <img id="Stage_Koluchka" class="edgeLoad-EDGE-51845247 png" alt="Колючая проволока на заборе тюрьмы" title="Колючая проволока" src="images/%D0%9A%D0%BE%D0%BB%D1%8E%D1%87%D0%BA%D0%B0.png"/>
+        <video id="Stage_Nebesa" class="edgeLoad-EDGE-11845212" title="Небеса" autoplay="autoplay" loop="loop"></video>
+        <img id="Stage_Koluchka" class="edgeLoad-EDGE-11845212" alt="Колючая проволока на тюремном заборе" title="Колючая проволока" src="images/%D0%9A%D0%BE%D0%BB%D1%8E%D1%87%D0%BA%D0%B0.png"/>
     </div>
 </body>
 </html>
