--- a/baners/reshotka/index.html
+++ b/baners/reshotka/index.html
@@ -3,31 +3,28 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-	<title>Kamera</title>
+	<title>Crimson_clouds</title>
 <!--Adobe Edge Runtime-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script type="text/javascript" charset="utf-8" src="http://animate.adobe.com/runtime/5.0.1/edge.5.0.1.min.js"></script>
     <style>
-        .edgeLoad-EDGE-16383981 { visibility:hidden; }
+        .edgeLoad-EDGE-51845247 { visibility:hidden; }
     </style>
 <script>
-   AdobeEdge.loadComposition('%D0%9D%D0%B5%D0%B1%D0%B5%D1%81%D0%B0%20%D0%B7%D0%B0%20%D1%80%D0%B5%D1%88%D1%91%D1%82%D0%BA%D0%BE%D0%B9', 'EDGE-16383981', {
+   AdobeEdge.loadComposition('%D0%91%D0%B0%D0%B3%D1%80%D0%BE%D0%B2%D1%8B%D0%B5%20%D0%BE%D0%B1%D0%BB%D0%B0%D0%BA%D0%B0', 'EDGE-51845247', {
     scaleToFit: "none",
     centerStage: "horizontal",
-    minW: "175px",
-    maxW: "undefined",
-    width: "350px",
-    height: "342px"
-}, {"dom":{}}, {"style":{"${symbolSelector}":{"isStage":"true","rect":["undefined","undefined","350px","342px"],"fill":["rgba(255,255,255,1)"]}},"dom":{}});
+    minW: "580px",
+    maxW: "1980px",
+    width: "1980px",
+    height: "172px"
+}, {"dom":{}}, {"dom":{}});
 </script>
 <!--Adobe Edge Runtime End-->
 
 </head>
 <body style="margin:0;padding:0;">
-	<div id="Stage" class="EDGE-16383981">
-	
-        <video id="Stage_Bagrovye_nebesa" class="edgeLoad-EDGE-16383981 mp4" title="Багровые небеса" autoplay="autoplay" loop="loop"></video>
-        <img id="Stage_Tyuremnaya_reshyotka" class="edgeLoad-EDGE-16383981 png" alt="Тюремная решётка в камере политзаключённых" title="Тюремная решётка" src="images/%D0%A2%D1%8E%D1%80%D0%B5%D0%BC%D0%BD%D0%B0%D1%8F_%D1%80%D0%B5%D1%88%D1%91%D1%82%D0%BA%D0%B0.png"/>
-    </div>
+	<div id="Stage" class="EDGE-51845247">
+	</div>
 </body>
 </html>
