--- a/Video/About_power/Index.html
+++ b/Video/About_power/Index.html
@@ -28,7 +28,7 @@ html, body {
     (function (window) {
         function setup(TSC) {
             TSC.playerConfiguration.setFlashPlayerSwf("Про власть_controller.swf");
-             TSC.playerConfiguration.addMediaSrc("skit-f9091.firebaseapp.com/Video/Anarchism/About_power/Про власть.mp4");
+             TSC.playerConfiguration.addMediaSrc("https://skit-f9091.firebaseapp.com/Video/Anarchism/About_power/Про власть.mp4");
              TSC.playerConfiguration.setXMPSrc("Про власть_config.xml");
              
              TSC.playerConfiguration.setAutoHideControls(true);
